@@ -58,6 +58,7 @@ This is a backwards-incompatible release.
  * Created `Carbon_LocalUser` resource for configuring local users.
  * Created `Carbon_Privilege` resource for configuring and identity's privileges.
  * Created `Carbon_Permission` resource for configuring file, directory, and registry permissions.
+ * Created `Carbon_Service` resource for configuring Windows services.
  
 ### File System
 
